--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>عالم المنبر - ALMANBAR WORLD</title>
     <meta name="description" content="شركة عالم المنبر للإنتاج الإعلامي والإعلان - ALMANBAR WORLD Media Production & Advertising" />
     <meta name="author" content="ALMANBAR WORLD" />
-
+<meta name="google-site-verification" content="LHlXvhJni4SWC6fwaPselOW0cylwbk8ntxWfGAAKk28" />
     <!-- Favicon + Apple Touch Icon -->
     <link rel="icon" href="/logo.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/logo.png">
@@ -16,14 +16,14 @@
     <meta property="og:title" content="عالم المنبر - ALMANBAR WORLD" />
     <meta property="og:description" content="شركة عالم المنبر للإنتاج الإعلامي والإعلان - ALMANBAR WORLD Media Production & Advertising" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://almalmnbr.vercel.app/" />
-    <meta property="og:image" content="https://almalmnbr.vercel.app/logo.png" />
+    <meta property="og:url" content="https://www.almalmnbr.net/" />
+    <meta property="og:image" content="https://www.almalmnbr.net/logo.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="عالم المنبر - ALMANBAR WORLD" />
     <meta name="twitter:description" content="شركة عالم المنبر للإنتاج الإعلامي والإعلان - ALMANBAR WORLD Media Production & Advertising" />
-    <meta name="twitter:image" content="https://almalmnbr.vercel.app/logo.png" />
+    <meta name="twitter:image" content="https://www.almalmnbr.net/logo.png" />
 
     <!-- Structured Data (Google Logo in search) -->
     <script type="application/ld+json">
@@ -32,7 +32,7 @@
       "@type": "Organization",
       "name": "عالم المنبر - ALMANBAR WORLD",
       "url": "https://almalmnbr.vercel.app",
-      "logo": "https://almalmnbr.vercel.app/logo.png"
+      "logo": "https://www.almalmnbr.net/logo.png"
     }
     </script>
 
