--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "عالم المنبر - ALMANBAR WORLD",
-      "url": "https://almalmnbr.vercel.app",
+      "url": "https://www.almalmnbr.net",
       "logo": "https://www.almalmnbr.net/logo.png"
     }
     </script>
